--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
 		<img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
-	</header>	
+	</header>
+  <nav id="nav_menu">
+	  <ul>
+		  <li><a href="index.html" class="current">Home</a></li>
+		  <li><a href="speakers.html">Speakers</a></li>
+		  <li><a href="luncheons.html">Luncheons</a></li>
+		  <li><a href="tickets.html">Tickets</a></li>
+		  <li><a href="aboutus.html"> About Us</a>
+			  <ul>
+				  <li><a href="#">Our History</a></li>
+				  <li><a href="#">Board of Directors</a></li>
+				  <li><a href="#">Past Speakers</a></li>
+				  <li><a href="#">Contact Information</a></li>
+			  </ul>
+		  </li>
+	  </ul>
+  </nav>
+
  	<main>
 	  <section>
 		<h2>Our Mission</h2>
@@ -39,11 +56,12 @@
 			Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research 
 			has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted 
 			fieldwork in a number of countries in Africa.</p>
-			<p><a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b>Or meet us there!</b></p>
+			<p><a href="speakers/c6_sampson.html">Read more.</a>
+				<a href="media/sampson.swf" target="_blank">Or play video.</a>
 		</article>
 
 		<h2>Our Ticket Packages</h2>
-		<ul>
+			<ul style="list-style-type:circle">
 			<li>Season Package: $95</li>
 			<li>Patron Package: $200</li>
 			<li>Single Speaker: $25</li>
