--- a/speakers/c6_sampson.html
+++ b/speakers/c6_sampson.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/normalize.css">
 	<link rel="stylesheet" href="../styles/c6_speaker.css">
 </head>
@@ -15,6 +15,23 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<nav id="nav_menu">
+		<ul>
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="speakers.html">Speakers</a></li>
+			<li><a href="luncheons.html">Luncheons</a></li>
+			<li><a href="tickets.html">Tickets</a></li>
+			<li><a href="aboutus.html"> About Us</a>
+				<ul>
+					<li><a href="#">Our History</a></li>
+					<li><a href="#">Board of Directors</a></li>
+					<li><a href="#">Past Speakers</a></li>
+					<li><a href="#">Contact Information</a></li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
+
 	<main>
 		<section>
 			<h1>Fossil Threads in the Web of Life</h1>
@@ -55,7 +72,6 @@
 			<img src="../images/chua75.jpg" alt="Amy Chua photo">
 			<h3>February<br><a href="../speakers/c6_sampson.html">Scott Sampson</a></h3>
 			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
-			<h3><a href="../index.html">Return to Home page</a></h3>
 		</aside>
 	</main>
 	<footer>
